--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,19 @@ jobs:
         pip install pyneuroml 
         pip install neuron
 
+    - name: Get models
+      
+        mkdir HayModel
+        git clone https://github.com/OpenSourceBrain/L5bPyrCellHayEtAl2011.git
+        cp L5bPyrCellHayEtAl2011/neuroConstruct/generatedNeuroML2/*nml HayModel
+
+        find .
+
+    - name: Test generation
+        cd Standardised_MD_Script
+        python MD-script.py -model Hay2011L5bPyramidalCell -filepath HayModel/ -netfile HayModel/TestL5PC.net.nml -cellfile HayModel/L5PC.cell.nml -lemsfile HayModel/LEMS_TestL5PC.xml
+        ls -alt Datasheets/Hay2011L5bPyramidalCell 
+
     - name: Final version info
       run: |
         pip list
