--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install NeuroML etc.
       run: |
 
-        pip install pyneuroml 
+        pip install pyneuroml pyelectro
         pip install neuron
 
     - name: Get models
@@ -40,7 +40,7 @@ jobs:
 
     - name: Test generation
       run: |
-      
+
         cd Standardised_MD_Script
         python MD-script.py -model Hay2011L5bPyramidalCell -filepath HayModel/ -netfile HayModel/TestL5PC.net.nml -cellfile HayModel/L5PC.cell.nml -lemsfile HayModel/LEMS_TestL5PC.xml
         ls -alt Datasheets/Hay2011L5bPyramidalCell 
