--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,7 @@ jobs:
 
         cd Standardised_MD_Script
 
-        python MD-script.py -model Hay2011L5bPyramidalCell -filepath HayModel/ -netfile HayModel/TestL5PC.net.nml -cellfile HayModel/L5PC.cell.nml -lemsfile HayModel/LEMS_TestL5PC.xml
-        ls -alt Datasheets/Hay2011L5bPyramidalCell 
-
-        python MD-script.py -model Bahl2012ReducedL5PyramidalCell -filepath BahlModel/ -netfile BahlModel/pyr_multi_comp_original.net.nml -cellfile BahlModel/pyr.cell.nml -lemsfile BahlModel/LEMS_pyr_multi_comp_original.xml
-        ls -alt Datasheets/Bahl2012ReducedL5PyramidalCell 
+        ./run-script.sh
 
     - name: Final version info
       run: |
